2009-01-31  Vincent Untz  <vuntz@gnome.org>

	Handle the case where pessulus fails under "su" because gconf doesn't
	work (you now need to use "su -" because of its dbus usage)
	See http://bugs.freedesktop.org/show_bug.cgi?id=17970 for some
	background.
	Fixes https://bugzilla.novell.com/show_bug.cgi?id=468319

	* Pessulus/lockdownapplier.py: add a supports_normal_settings method
	* Pessulus/lockdownappliergconf.py: implement this method, and add a
	SafeGConfClient class that will simulate a working gconf use when
	there's no gconf access. It might be useful in the future.
	* Pessulus/main.py: display an error dialog with clear instructions
	when the application cannot be used because we have no access to gconf

2008-09-20  Rob Bradford  <rob@robster.org.uk>

	* NEWS:
	* README:
	* configure.ac:
	Release 2.24.0

2008-09-03  Vincent Untz  <vuntz@gnome.org>

	* Pessulus/main.py: use the right window icon
	* Pessulus/maindialog.py: use the right icon for the screensaver
	settings.

2008-08-29  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am:
	* Pessulus/Makefile.am:
	* pessulus.in: install in $pythondir instead of $pyexecdir
	Fix bug #549728
	Patch by Tom Callaway <tcallawa@redhat.com>

2008-04-18  Rob Bradford  <rob@robster.org.uk>

	* configure.ac:
	Post-release bump.

==================== 2.23.1 ====================

2008-04-18  Rob Bradford  <rob@robster.org.uk>

	* NEWS:
	* README:
	* configure.ac:
	Release 2.23.1.

2008-04-18  Rob Bradford  <rob@robster.org.uk>

	* data/Makefile.am:
	* data/pessulus.desktop.in.in:
	* data/pessulus.svg:
	* date/pessulus-{16,22,24,32,48}.png:
	Add funky icon from Jakub Steiner (bug #466252.)

2008-04-18  Rob Bradford  <rob@robster.org.uk>

	* pessulus.in:
	Switch to using python-gnome-desktop's bugbuddy integration. Patch
	from AMAZIGH Aneglus, bug #394529.)
	* configure.ac:
	We now need gnome-python-desktop 2.17.2 (at least.)

2008-03-17  Vincent Untz  <vuntz@gnome.org>
